# xkb_layout

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
Linux XKB/: sla
Linux_Installer/: main.py
Linux_XKB/: sla
installer/: main.py
res/: evdev.xml  sla.xkb  sla_layout.xml
src/: main.rs  sla  slaXML
